<resources>
    <string name="app_name">PC1DAM20100771</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Players</string>
    <string name="menu_gallery">Rendimiento</string>
    <string name="menu_slideshow">Equipos</string>
    <string name="strTitle">SIGN IN</string>
    <string name="msginputemail">Enter email</string>
    <string name="msginputpassword">Enter password</string>
    <string name="btnnameLogin">Login</string>
    <string name="fragmenttitleplayer">PLAYERS</string>
    <string name="fragmenttitlerendimiento">RENDIMIENTO</string>
    <string name="msginputkm">Kilometros recorridos</string>
    <string name="msginputmin">Minutos jugados</string>
    <string name="btnnamecalcular">Calcular</string>
    <string name="subtittlettxt1">El rendimiento es:</string>
    <string name="btnreturnlogin">Return to login</string>
    <string name="tittlefragmentequipos">EQUIPOS</string>
</resources>