<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navplayers">

    <fragment
        android:id="@+id/navplayers"
        android:name="dev.dobler.pc1dam20100771.ui.players.PlayersFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_players" />

    <fragment
        android:id="@+id/navrendimiento"
        android:name="dev.dobler.pc1dam20100771.ui.rendimiento.RendimientoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_rendimiento" />

    <fragment
        android:id="@+id/navequipos"
        android:name="dev.dobler.pc1dam20100771.ui.equipos.EquiposFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_equipos" />
</navigation>